methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:10: error: not found: value \
  \permet de faire un V 
  ^PictureMono2:10: error: not found: value de
  \permet de faire un V 
          ^PictureMono2:10: error: not found: value un
  \permet de faire un V 
                   ^PictureMono2:21: error: not found: value \
  \permet de faire 4 V compris dans un carré
  ^PictureMono2:21: error: not found: value de
  \permet de faire 4 V compris dans un carré
          ^PictureMono2:21: error: not found: value compris
  \permet de faire 4 V compris dans un carré
                       ^PictureMono2:21: error: not found: value un
  \permet de faire 4 V compris dans un carré
                                    ^PictureMono2:27: error: not found: value \
  \permet de faire 3 cadres en se basant sur une ligne de base
  ^PictureMono2:27: error: not found: value de
  \permet de faire 3 cadres en se basant sur une ligne de base
          ^PictureMono2:27: error: not found: value en
  \permet de faire 3 cadres en se basant sur une ligne de base
                            ^PictureMono2:27: error: not found: value basant
  \permet de faire 3 cadres en se basant sur une ligne de base
                                  ^PictureMono2:27: error: not found: value une
  \permet de faire 3 cadres en se basant sur une ligne de base
                                             ^PictureMono2:27: error: not found: value de
  \permet de faire 3 cadres en se basant sur une ligne de base
                                                       ^